# SistemaHospitalario

./: CMakeLists.txt  README.md
SistemaHospitalario/: CMakeLists.txt  main.cpp
SistemaHospitalario/include/: Archivos.h  Cita.h  Medico.h  Paciente.h  Persona.h
SistemaHospitalario/src/: Archivos.cpp  Cita.cpp  Medico.cpp  Paciente.cpp  Persona.cpp  main.cpp
